[package]
name = "wsl-api"
version = "0.1.0"
edition = "2021"

[dependencies]
wsl-com-api = { path = "../wsl-com-api", version = "0.1.0" }
windows = { version = "0.57.0", features = [
    "Win32_System_Com",
    "Win32_Foundation"
] }

[lib]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
