[package]
name = "wsl-api"
version = "0.1.0"
description = "WSL API for Rust"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
wsl-com-api = { path = "../wsl-com-api", version = "0.1.0" }
windows = { version = "0.57.0", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security"
] }
uuid = "1"

[lib]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
