[package]
name = "wsl-api"
version = "0.1.0"
description = "WSL API for Rust"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
wsl-com-api-sys = { path = "../wsl-com-api-sys", version = "0.1.0" }
windows = { version = "0.57.0", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
] }
uuid = "1"
bitflags = "2.9.0"
widestring = "1.2"

[lib]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
