[package]
name = "wsl-com-api-sys"
version = "0.1.0"
description = "Low-level WSL COM API for Rust"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
windows = { version = "0.57.0", features = [
    "Win32_System_Com",
    "Win32_Foundation"
] }

[lib]
